ajout dans le boilerplate

--- a/_layout/_layout.scss
+++ b/_layout/_layout.scss
@@ -14,4 +14,9 @@
 @import'_navFooter';
 @import'_navLangue';
 @import'_navPrincipale';
-@import'_pub';
+@import'_carousselProduits';
+@import'_heuresOuverture';
+@import'_promotion';
+@import'_etapes';
+@import'_livraison';
+@import'_aPropos';
