--- a/_base/_variables.scss
+++ b/_base/_variables.scss
@@ -6,3 +6,15 @@
 
 /*////[Variables]
 ________________________________________________________*/
+:root{
+    /*[Variantes de couleurs]*/
+    --vert-pale: hsl(155, 23%, 50%);
+    --vert: hsl(155, 30%, 37%);
+    --gris-pale: hsl(0, 0%, 89%);
+    --gris-fonce: hsl(0, 0%, 10%);
+    --blanc: hsl(0, 0%, 100%);
+    --noir: hsl(0, 0%, 0%);
+    /*[Variantes de medias queries]*/
+    --breakpoint-1200: 1200;
+    --breakpoint-1800: 1800;
+}
