--- a/_base/_mixin.scss
+++ b/_base/_mixin.scss
@@ -6,5 +6,26 @@
 
 
 // - - - - - - - - - - - - - - - - - - - - - - - - - - -
-// Importation
+// Raccourcis pour écriture des media queries (exemple: @include rwd-min-width(700) {})
 // - - - - - - - - - - - - - - - - - - - - - - - - - - -
+@mixin rwd-min-width($screen) {
+    @media (min-width: $screen+'px') {
+        @content;
+    }
+ }
+
+ @mixin flex-column-center{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+ }
+
+ @mixin flex-items-center{
+     display: flex;
+     align-items: center;
+ }
+ @mixin flex-column{
+     display: flex;
+     flex-direction: column;
+ }
