--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /*////[Variables]
 ________________________________________________________*/
 :root {
@@ -15,4 +16,100 @@ ________________________________________________________*/
 
 /*////[Reset du code HTML]
 ________________________________________________________*/
+/*[Reset tout les balises]*/
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+
+/*[Le document en général]*/
+html {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
+  font-size: 16px;
+  scroll-behavior: smooth;
+}
+
+/*[Affecte tous les enfants]*/
+*,
+*::before,
+*::after {
+  -webkit-box-sizing: inherit;
+  box-sizing: inherit;
+  padding: 0;
+  margin: 0;
+}
+
+/*[Reset des liens]*/
+a:link,
+a:visited {
+  text-decoration: none;
+  color: inherit;
+}
+
+/*[Reset des listes à l'intérieur d'un nav]*/
+nav ul {
+  list-style: none;
+}
+
+.top-nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  padding: 0 2em;
+  height: 3em;
+  color: var(--blanc);
+  background-color: var(--vert);
+}
+
+.top-nav p, .top-nav i {
+  margin: 0 .3em;
+}
+
+header {
+  background-image: url(../img/header.jpg);
+  height: 80vh;
+  padding: 2em 4em;
+}
+
+header .nav-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+header ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  color: var(--blanc);
+}
+
+header ul li {
+  margin: 0 .5em;
+}
 /*# sourceMappingURL=style.css.map */
