--- a/_layout/_header.scss
+++ b/_layout/_header.scss
@@ -14,11 +14,12 @@
     justify-content: flex-end;
     padding: 0 2em;
     height: 3em;
+    font-weight: 400;
     color: var(--blanc);
     background-color: var(--vert);
 
     & p, i{
-        margin: 0 .3em;
+        margin: 0 .5em;
     }
 }
 
@@ -27,16 +28,7 @@ header{
     height: 80vh;
     padding: 2em 4em;
 
-    & .nav-wrapper{
-        display: flex;
-    }
-
-    & ul{
-        display: flex;
-        color: var(--blanc);
-        
-        & li{
-            margin: 0 .5em;
-        }
+    & img{
+        margin-right: 2em;
     }
 }
