--- a/_base/_mixin.scss
+++ b/_base/_mixin.scss
@@ -31,6 +31,14 @@
      flex-direction: column;
  }
 
+ @mixin input-text{
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+ }
+
 @mixin ligne-after{
     content: "";
     display: block;
