--- a/style.css
+++ b/style.css
@@ -647,7 +647,7 @@ h2 {
   margin: .6em auto 0 auto;
 }
 
-.promotion h2:after {
+.promotion h2:after, .fiche-produit h2:after {
   content: "";
   display: block;
   background-color: var(--vert);
@@ -655,5 +655,79 @@ h2 {
   width: 7em;
   margin-top: .5em;
   margin: .6em 0 0 0;
+}
+
+.fiche-produit {
+  padding: 3em 5em;
+  background-color: var(--gris-tres-pale);
+}
+
+.fiche-produit .fiche-description {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.fiche-produit .fiche-description img {
+  margin-right: 1em;
+  width: 40em;
+  height: auto;
+}
+
+.fiche-produit .fiche-description p {
+  margin: 2em 0;
+  font-weight: 400;
+}
+
+.fiche-produit .fiche-description .calo-prix p:first-of-type {
+  margin-right: 10em;
+}
+
+.fiche-produit .fiche-description .ajout button {
+  display: inline-block;
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: bold;
+  color: white;
+  border: none;
+  cursor: pointer;
+  padding: 1em 1.5em;
+  margin-left: 2em;
+  font-size: .9em;
+  background-color: var(--vert);
+}
+
+.fiche-produit .fiche-description .calo-prix, .fiche-produit .fiche-description .ajout {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.fiche-recommendations {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-top: 5em;
+}
+
+.fiche-recommendations h3 {
+  margin-bottom: 1em;
+  font-weight: 500;
+}
+
+.fiche-recommendations img {
+  margin: 1em;
+  width: 10em;
+  height: auto;
 }
 /*# sourceMappingURL=style.css.map */
