--- a/style.css
+++ b/style.css
@@ -156,7 +156,7 @@ footer .f-form button {
 }
 
 header {
-  background-image: url(../img/header.jpg);
+  background-image: url(../img/header-1020.jpg);
   height: 80vh;
   padding: 2em 6em;
 }
@@ -183,6 +183,14 @@ header img {
 
 .fil-ariane p {
   margin-right: 1em;
+}
+
+@media (min-width: 1200px) {
+  background-color: cadetblue;
+}
+
+@media (min-width: 1200px) {
+  background-image: url(../img/header-1800.jpg);
 }
 
 .liste-produits {
