--- a/_base/_variables.scss
+++ b/_base/_variables.scss
@@ -10,6 +10,7 @@ ________________________________________________________*/
     /*[Variantes de couleurs]*/
     --vert-pale: hsl(155, 23%, 50%);
     --vert: hsl(155, 30%, 37%);
+    --vert-fonce: hsl(156, 31%, 31%);
     --gris-tres-pale: hsl(0, 0%, 94%);
     --gris-pale: hsl(0, 0%, 89%);
     --gris-fonce: hsl(0, 0%, 10%);
