--- a/_layout/_listeProduits.scss
+++ b/_layout/_listeProduits.scss
@@ -65,6 +65,11 @@
                 font-size: .9em;
                 color: var(--blanc);
                 background-color: var(--vert);
+
+                &:hover{
+                    background-color: var(--vert-fonce);
+                    cursor: pointer;
+                }
             }
         }
     }
