--- a/_layout/_livraison.scss
+++ b/_layout/_livraison.scss
@@ -32,6 +32,10 @@
         @include button;
         padding: .5em 1.5em;
         background-color: var(--vert);
+
+        &:hover{
+            background-color: var(--vert-fonce);
+        }
     }
 
     & img, p, button, input[type=text]{
