--- a/_layout/_navPrincipale.scss
+++ b/_layout/_navPrincipale.scss
@@ -19,6 +19,11 @@ header{
         
         & li{
             margin: 0 .8em;
+            
+            &:hover{
+                color: var(--gris-pale);
+                border-bottom: 2px solid var(--vert);
+            }
         }
     }
 }
