--- a/_layout/_promotion.scss
+++ b/_layout/_promotion.scss
@@ -13,6 +13,8 @@
     display: flex;
     height: 65vh;
     background-image: url(../img/promotion.jpg);
+    background-position: center;
+    background-size: cover;
 
     & .promo-infos{
         margin: 5em;
