--- a/_layout/_navPrincipale.scss
+++ b/_layout/_navPrincipale.scss
@@ -9,6 +9,10 @@ header{
         display: flex;
     }
 
+    & nav{
+        background-color: none!important;
+    }
+
     & ul{
         display: flex;
         font-family: 'Roboto Slab', serif;
