--- a/style.css
+++ b/style.css
@@ -313,7 +313,58 @@ header .nav-wrapper {
 }
 
 header nav {
-  background-color: none !important;
+  color: inherit;
+  height: auto;
+  min-height: 0;
+  max-height: none;
+  width: 100%;
+  min-width: 0;
+  max-width: none;
+  background-color: transparent;
+  line-height: normal;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+
+header nav a {
+  color: inherit;
+}
+
+header nav i,
+header nav i.material-icons {
+  display: inline-block;
+  font-size: inherit;
+  height: auto;
+  line-height: 1;
+}
+
+header nav ul {
+  margin: 0;
+}
+
+header nav ul li {
+  -webkit-transition: none;
+  transition: none;
+  float: none;
+  padding: 0;
+}
+
+header nav ul li.active {
+  background-color: transparent;
+}
+
+header nav ul a {
+  display: inline-block;
+  -webkit-transition: none;
+  transition: none;
+  font-size: inherit;
+  color: inherit;
+  padding: 0;
+  cursor: pointer;
+}
+
+header nav ul a:hover {
+  background-color: transparent;
 }
 
 header ul {
@@ -383,6 +434,12 @@ header ul li:hover {
   color: var(--noir);
 }
 
+.produits .carousel {
+  height: 40em;
+  top: -12em;
+  left: -7em;
+}
+
 .produits article {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -435,7 +492,8 @@ header ul li:hover {
   color: white;
   border: none;
   cursor: pointer;
-  margin-top: 2em;
+  position: relative;
+  top: -10em;
   background-color: var(--vert);
   padding: .6rem .8rem;
   font-size: .9rem;
@@ -604,6 +662,7 @@ header ul li:hover {
   display: inline-block;
   border: 1px solid #ccc;
   border-radius: 4px;
+  width: 20%;
 }
 
 .perimetre-livraison button {
