--- a/_base/_variables.scss
+++ b/_base/_variables.scss
@@ -11,6 +11,7 @@ ________________________________________________________*/
     --vert-pale: hsl(155, 23%, 50%);
     --vert: hsl(155, 30%, 37%);
     --vert-fonce: hsl(156, 31%, 31%);
+    --vert-t: hsla(155, 30%, 37%, 0.541);
     --gris-tres-pale: hsl(0, 0%, 94%);
     --gris-pale: hsl(0, 0%, 89%);
     --gris-fonce: hsl(0, 0%, 10%);
