--- a/_base/_mixin.scss
+++ b/_base/_mixin.scss
@@ -37,6 +37,7 @@
     display: inline-block;
     border: 1px solid #ccc;
     border-radius: 4px;
+    background-color: var(--blanc);
  }
 
 @mixin ligne-after{
